updated the default vhost configuration

--- a/default.conf
+++ b/default.conf
@@ -2,11 +2,11 @@ DavLockDB /dav/DavLocK
 <VirtualHost *:80>
 
         ServerAdmin webmaster@localhost
-        DocumentRoot /dav
+        DocumentRoot /dav/share
 
         Alias /.well-known/acme-challenge/ /acme/.well-known/acme-challenge
 
-        <Directory /dav>
+        <Directory /dav/share>
             Options Indexes
             DAV On
             AuthType Basic
